--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -73,6 +73,28 @@
                     På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
                     For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre)</p>
         </div>
+        <!--Flexbox for å dele inn bilder på siden-->
+        <div class="container">
+            <div class="item">
+                <div class="bilde1">
+                    <img src="images/accessibility1.png">
+                    <div class="bildeTekst">
+                     <p>Topical page etter første test og hvilke feil som slo ut</p>
+                    </div> 
+                </div>
+        </div> 
+        <div class="item">
+            <div class="bilde2">
+                <img src="images/accessibility2.png">
+                <div class="bildeTekst">
+                    <p>Topical page etter endringer av første test</p>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="box2">
+            <h1>Endringer av nettside etter test</H1>
+        </div>
 
     </main>
     
