--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     
             </nav>
 
-            <!-- Meny for mindre skjermer -->
-            <!-- Hentet fra https://stackoverflow.com/questions/63960934/i-want-to-close-this-side-bar-by-clicking-same-button -->
+            <!--Meny for mindre skjermer-->
+            <!--Hentet fra https://stackoverflow.com/questions/63960934/i-want-to-close-this-side-bar-by-clicking-same-button-->
             <div id="main">
                 <button class="openbtn" onclick="OpenOrClose()">☰</button>
             </div>
