--- a/meny.html
+++ b/meny.html
@@ -8,6 +8,7 @@
 
         <title>Meny</title>
         <link rel="icon" href="images/utropstegn.png" type="image/x-icon">
+        
        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -95,7 +96,7 @@
                     </div>
 
                     <div class="matrett">
-                        <h3 class="matrett-innhold">Avokadotoast <i class="fa-solid fa-leaf"></i> <span style="float: right">99,-</span></h3>
+                        <h3 class="matrett-innhold">Avokadotoast <i style="font-size: 1.2rem" class="fa">&#xf06c;</i> <span style="float: right">99,-</span></h3>
                         <p>Avokado, syltet rødløk, sesamfrø,</p>
                         <p>alfalfaspirer på toasted surdeigsbrød.</p>
                         <p class ="allergener">[Hvete]</p>
@@ -131,7 +132,7 @@
                     <div class="box-meny-lunsj">
 
                         <div class="matrett">
-                            <h3 class="matrett-innhold">Acai bowl <i class="fa-solid fa-leaf"></i><span style="float: right;">119,-</span></h3>
+                            <h3 class="matrett-innhold">Acai bowl <i style="font-size: 1.2rem" class="fa">&#xf06c;</i><span style="float: right;">119,-</span></h3>
                                 <p>Frossen acai toppet med granola, blåbær,</p>
                                 <p>banan, kokosflak og hempfrø.</p>
                                 <p class ="allergener">[Hvete, mandler]</p>
@@ -159,7 +160,7 @@
                         </div>
 
                         <div class="matrett">
-                            <h3 class="matrett-innhold">Grønnkålsalat <i class="fa-solid fa-leaf"></i><span style="float: right;">129,-</span></h3>
+                            <h3 class="matrett-innhold">Grønnkålsalat <i style="font-size: 1.2rem" class="fa">&#xf06c;</i><span style="float: right;">129,-</span></h3>
                                 <p>Grønnkål, bakt søtpotet, syltet rødløk</p>
                                 <p>og grapefrukt med balsamico.</p>
                         </div>
