--- a/aktuelt.html
+++ b/aktuelt.html
@@ -52,6 +52,7 @@
         <nav id="mySidebar">
             <div class="logoSpinning2">
                 <img src="images/IoT-white.png" alt="Sidebar internet of things icon spinning">  
+            </div>
             <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()" title="Åpne meny"></a>
             <a href="index.html">Hjem</a>
             <a href="meny.html">Meny</a>
