--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -28,9 +28,8 @@
 
         <!-- Meny for større skjermer -->
         <nav>
-
             <div class="navbar-home" >
-
+                
                 <a href="index.html">Hjem</a>
                 <a href="meny.html">Meny</a>
                 <a href="booking.html" class="nav-booking">Booking</a>
@@ -65,8 +64,10 @@
                 et verktøy for evaluering av brukervennlighet på nett. WAVE gir oss tilbakemelding om vi har noen store problemer med oppsettet, 
                 kontraster, og gir kommentarer på gode funksjoner. Allerede fra starten, la gruppen fokus på å gjøre nettsiden så tilgjengelig for så mange brukere som mulig. 
                 Vi tenkte dermed nøye gjennom hvilke farger, fonter og størrelser på tekst vi ville bruke. Alt tekst i bilder sørget vi også for å ha med. Gruppen gjorde bevisste valg på ulike ting, blant annet når det kom til overskrifter, media queries og alt tekst. 
-                    På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
-                    For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre)</p>
+                På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
+                For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre).
+                I tillegg, la vi alt-tekst på alle bilder og ikoner på sidene, både for brukervennligheten, og dersom bildet ikke kan vises grunnet dårlig dekning eller en feil i bildekoden.
+            </p>
                 <p></p>
         </div>
         <!--Flexbox for å dele inn bilder på siden-->
@@ -91,8 +92,10 @@
         <div class="box2">
             <h1>Endringer av nettside etter test</h1>
             <p>Etter å ha kjørt de ulike sidene gjennom WAVE-testen første gang, fikk vi utslag på et par problemer. Som sett på bildet over, var disse problemene hovedsakelig grunnet kontrasten på tekst og bakgrunn. 
-                Dermed gjorde vi grønnfargen en del mørkere for at alle med både godt og dårlig syn skal klare å lese de boksene med farge. 
-                I tillegg til kontrastutfordringene, kom det varsel om en tom link i sidebaren vår, som viste seg å være javascript:void(0)-linken som trengte en tittel. </p>
+                Dermed gjorde vi både grønnfargen og noen andre farger en del mørkere for at de med både godt og dårlig syn skal klare å lese boksene med farge. 
+                I tillegg til kontrastutfordringene, kom det varsel om en tom link i sidebaren vår, som viste seg å være javascript:void(0)-linken som trengte en tittel. Det kom også en varsling om en "Redundant link", 
+                da vi har både en HJEM link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til velkomstsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.
+                Dette var et valg som vi mente </p>
         </div>
 
     </main>
