--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -29,7 +29,7 @@
         <!-- Meny for større skjermer -->
         <nav>
             <div class="navbar-home" >
-                
+
                 <a href="index.html">Hjem</a>
                 <a href="meny.html">Meny</a>
                 <a href="booking.html" class="nav-booking">Booking</a>
@@ -67,6 +67,7 @@
                 På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
                 For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre).
                 I tillegg, la vi alt-tekst på alle bilder og ikoner på sidene, både for brukervennligheten, og dersom bildet ikke kan vises grunnet dårlig dekning eller en feil i bildekoden.
+                Det er også fullt mulig å bruke tab-knappen på tastaturet for å navigere seg gjennom sidene våre. 
             </p>
                 <p></p>
         </div>
@@ -94,8 +95,11 @@
             <p>Etter å ha kjørt de ulike sidene gjennom WAVE-testen første gang, fikk vi utslag på et par problemer. Som sett på bildet over, var disse problemene hovedsakelig grunnet kontrasten på tekst og bakgrunn. 
                 Dermed gjorde vi både grønnfargen og noen andre farger en del mørkere for at de med både godt og dårlig syn skal klare å lese boksene med farge. 
                 I tillegg til kontrastutfordringene, kom det varsel om en tom link i sidebaren vår, som viste seg å være javascript:void(0)-linken som trengte en tittel. Det kom også en varsling om en "Redundant link", 
-                da vi har både en HJEM link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til velkomstsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.
-                Dette var et valg som vi mente </p>
+                da vi har både en HJEM-link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til hjemsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.</p>
+        </div>
+        <div class="box3">
+            <h1>Ting til Ina</h1>
+            <p></p>
         </div>
 
     </main>
