--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -17,37 +17,31 @@
 </head>
 
 <body>
-    <header>
-        <div class="bildeseksjon">    
 
-            <a href="index.html">
-                <img src="images/logo2.png" alt="Sulten hjemlogo">
-            </a>
+<header>
+    <div class="bildeseksjon">    
+        <a href="index.html">
+            <img src="images/logo2.png" alt="Sulten hjemlogo">
+        </a>
+    </div>
 
+    <!-- Meny for større skjermer -->
+    <nav>
+        <div class="navbar-home" >
+            <a href="index.html">Hjem</a>
+            <a href="meny.html">Meny</a>
+            <a href="booking.html" class="nav-booking">Booking</a>
+            <a href="aktuelt.html">Topical Page</a>
+            <a href="brukervennlighet.html">Accessibility Page</a>
         </div>
+    </nav>
 
-        <!-- Meny for større skjermer -->
-        <nav>
-            <div class="navbar-home" >
-
-                <a href="index.html">Hjem</a>
-                <a href="meny.html">Meny</a>
-                <a href="booking.html" class="nav-booking">Booking</a>
-                <a href="aktuelt.html">Topical Page</a>
-                <a href="brukervennlighet.html">Accessibility Page</a>
-
-            </div>
-
-        </nav>
-
-        <!-- Meny for mindre skjermer -->
-        <!-- Hentet fra https://stackoverflow.com/questions/63960934/i-want-to-close-this-side-bar-by-clicking-same-button -->
-        <div id="main">
-            <button class="openbtn" onclick="OpenOrClose()">☰</button>
-        </div>
-
+    <!-- Meny for mindre skjermer -->
+    <!-- Hentet fra https://stackoverflow.com/questions/63960934/i-want-to-close-this-side-bar-by-clicking-same-button -->
+    <div id="main">
+        <button class="openbtn" onclick="OpenOrClose()">☰</button>
+    </div>
         <nav id="mySidebar">
-
             <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()" title="Åpne meny"></a>
             <a href="index.html">Hjem</a>
             <a href="meny.html">Meny</a>
@@ -58,7 +52,7 @@
         </nav>
     </header>
     <main>
-        <div class="box1">
+        <div class="tekst">
             <h1>Hvordan vi testet brukervennlighet</h1>
             <p>For å sjekke brukervennligheten på de ulike sidene våre brukte vi Google Chrome-utvidelsen <a href="https://wave.webaim.org/">WAVE</a>, 
                 et verktøy for evaluering av brukervennlighet på nett. WAVE gir oss tilbakemelding om vi har noen store problemer med oppsettet, 
@@ -69,43 +63,40 @@
                 I tillegg, la vi alt-tekst på alle bilder og ikoner på sidene, både for brukervennligheten, og dersom bildet ikke kan vises grunnet dårlig dekning eller en feil i bildekoden.
                 Det er også fullt mulig å bruke tab-knappen på tastaturet for å navigere seg gjennom sidene våre. 
             </p>
-                <p></p>
         </div>
-        <!--Flexbox for å dele inn bilder på siden-->
+
+        <!--Bilder-->
         <div class="container">
-            <div class="item">
-                <div class="bilde1">
-                    <img src="images/accessibility1.png" alt="Skjermbilde av nettside etter utført test">
-                    <div class="bildeTekst">
-                     <p>Topical page etter første test og hvilke feil som slo ut</p>
-                    </div> 
-                </div>
-        </div> 
-        <div class="item">
-            <div class="bilde2">
+            <div class="bilder">
+                <img src="images/accessibility1.png" alt="Skjermbilde av nettside etter utført test">
+                <div class="bildeTekst">
+                    <p>Topical page etter første test og hvilke feil som slo ut</p>
+                </div> 
+            </div>
+            <div class="bilder">
                 <img src="images/accessibility2.png" alt="Skjermbilde av nettsides endringer etter utført test">
                 <div class="bildeTekst">
                     <p>Topical page etter endringer av første test</p>
                 </div>
             </div>
         </div>
-        </div>
-        <div class="box2">
+        <div class="tekst">
             <h1>Endringer av nettside etter test</h1>
             <p>Etter å ha kjørt de ulike sidene gjennom WAVE-testen første gang, fikk vi utslag på et par problemer. Som sett på bildet over, var disse problemene hovedsakelig grunnet kontrasten på tekst og bakgrunn. 
                 Dermed gjorde vi både grønnfargen og noen andre farger en del mørkere for at de med både godt og dårlig syn skal klare å lese boksene med farge. 
                 I tillegg til kontrastutfordringene, kom det varsel om en tom link i sidebaren vår, som viste seg å være javascript:void(0)-linken som trengte en tittel. Det kom også en varsling om en "Redundant link", 
-                da vi har både en HJEM-link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til hjemsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.</p>
-        </div>
-        <div class="box3">
-            <h1>Ting til Ina</h1>
-            <p></p>
+                da vi har både en HJEM-link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til hjemsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.
+            </p>
+            <br>
+            <p>Vi fikk også utslag på booking siden hvor vi hadde glemt å legge til label i form elementet. Dette er viktig å inkludere for god accessibility. Vi la dermed til en label på alle inputboksene, 
+                men ønsket ikke at teksten som legges til automatisk på siden av boksene skulle være synlige. Vi vurderte hvordan vi skulle få til dette uten at det skulle gå utover brukervennligheten. Vi kom dermed frem 
+                til at Opacity: 0; ville være det beste. Da vil vi kunne bruke placeholdetekst, og både label og input vil bli lest opp av screen readers når de med nedsatt syn fyller inn skjemaet. 
+            </p>
         </div>
 
     </main>
     
     <footer>
-        <div class="boxFooter"></div>
         <!-- JavaScript for toggle menu -->
         <script src="javascript/myFile.js"></script> 
     </footer>
