la inn bilde i brukervennlighet

--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -65,21 +65,20 @@
             </p>
         </div>
 
-        <!--Bilder-->
-        <div class="container">
-            <div class="bilder">
-                <img src="images/accessibility1.png" alt="Skjermbilde av nettside etter utført test">
-                <div class="bildeTekst">
-                    <p>Topical page etter første test og hvilke feil som slo ut</p>
-                </div> 
-            </div>
-            <div class="bilder">
-                <img src="images/accessibility2.png" alt="Skjermbilde av nettsides endringer etter utført test">
-                <div class="bildeTekst">
-                    <p>Topical page etter endringer av første test</p>
-                </div>
+        <div class="bilder">
+            <img src="images/accessibility1.png" alt="Skjermbilde av nettside etter utført test">
+            <div class="bildeTekst">
+                <p>Topical page etter første test og hvilke feil som slo ut</p>
+            </div> 
+        </div>
+
+        <div class="bilder">
+            <img src="images/accessibility2.png" alt="Skjermbilde av nettsides endringer etter utført test">
+            <div class="bildeTekst">
+                <p>Topical page etter endringer av første test</p>
             </div>
         </div>
+        
         <div class="tekst">
             <h1>Endringer av nettside etter test</h1>
             <p>Etter å ha kjørt de ulike sidene gjennom WAVE-testen første gang, fikk vi utslag på et par problemer. Som sett på bildet over, var disse problemene hovedsakelig grunnet kontrasten på tekst og bakgrunn. 
@@ -92,6 +91,13 @@
                 men ønsket ikke at teksten som legges til automatisk på siden av boksene skulle være synlige. Vi vurderte hvordan vi skulle få til dette uten at det skulle gå utover brukervennligheten. Vi kom dermed frem 
                 til at Opacity: 0; ville være det beste. Da vil vi kunne bruke placeholdetekst, og både label og input vil bli lest opp av screen readers når de med nedsatt syn fyller inn skjemaet. 
             </p>
+        </div>
+
+        <div class="bilder">
+            <img src="images/accessibility3.png" alt="Skjermbilde av errors i bookingside">
+            <div class="bildeTekst">
+                <p>Errors funnet i bookingsiden</p>
+            </div>
         </div>
 
     </main>
