--- a/meny.html
+++ b/meny.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
 
-                <div class="drikke">
+                <div class="drikke" id="varm-drikke">
                     <h2>Varm drikke</h2>
                     <h3 class="matrett-innhold">Chai latte <span style="float: right;">54,-</span></h2>
                     <h3 class="matrett-innhold">Kaffe mocha <span style="float: right;">54,-</span></h2>
@@ -257,7 +257,7 @@
                     <h3 class="matrett-innhold">Varm sjokolade <span style="float: right;">44,-</span></h2>
                 </div>
 
-                <div class="drikke">
+                <div class="drikke" id="kald-drikke">
                     <h2>Kald drikke</h2>
                     <h3 class="matrett-innhold">Iskaffe <span style="float: right;">49,-</span></h3>
                     <h3 class="matrett-innhold">Ismocha karamell <span style="float: right;">62,-</span></h3>
