--- a/meny.html
+++ b/meny.html
@@ -21,7 +21,7 @@
     <body>
 
             <header>
-                <div class="bildeseksjon">    
+                <div class="logo">    
 
                     <a href="index.html">
                         <img src="images/logo2.png" alt="Sulten hjemlogo">
@@ -67,7 +67,7 @@
         <!--Meny-->
     
             <!--Hovedbilde med tekst-->
-            <div class="container">
+            <div class="headerbilde">
                 <!--Fotograf: Zakaria Zayane Kilde https://unsplash.com/photos/0uAVsDcyD0M -->
                 <img src="images/restaurantMeny.jpg" alt="restaurant med bord og stoler">
                 <h1 class="centered">Velkommen til vår restaurant. Her kan du nyte et godt måltid i en behagelig atmosfære.</h1>
@@ -292,7 +292,7 @@
                     <a href="https://facebook.com" target="_blank" class="fa fa-facebook" title="Kontakt oss via facebook"></a>
                     <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="Kontakt oss via twitter"></a>
                     <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="Kontakt oss via instagram"></a>
-                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
+                    <a href="mailto:post@sulten.no" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
 
                 </div>
             
