--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="https://facebook.com" target="_blank" class="fa fa-facebook" title="Kontakt oss via facebook"></a>
                     <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="Kontakt oss via twitter"></a>
                     <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="Kontakt oss via instagram"></a>
-                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
+                    <a href="mailto:post@sulten.no" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
 
                 </div>
             
