--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <header>
 
-            <div class="bildeseksjon">    
+            <div class="logo">    
                 <a href="index.html">
                     <!-- Logo laget selv i illustrator -->
                     <img src="images/logo2.png" alt="Sulten hjemlogo">
