--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-    <div class="bildeseksjon">    
+    <div class="logo">    
         <a href="index.html">
             <img src="images/logo2.png" alt="Sulten hjemlogo">
         </a>
