--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -57,10 +57,10 @@
             <p>For å sjekke brukervennligheten på de ulike sidene våre brukte vi Google Chrome-utvidelsen <a href="https://wave.webaim.org/">WAVE</a>, 
                 et verktøy for evaluering av brukervennlighet på nett. WAVE gir oss tilbakemelding om vi har noen store problemer med oppsettet, 
                 kontraster, og gir kommentarer på gode funksjoner. Allerede fra starten, la gruppen fokus på å gjøre nettsiden så tilgjengelig for så mange brukere som mulig. 
-                Vi tenkte dermed nøye gjennom hvilke farger, fonter og størrelser på tekst vi ville bruke. Alt tekst i bilder sørget vi også for å ha med. Gruppen gjorde bevisste valg på ulike ting, blant annet når det kom til overskrifter, media queries og alt tekst. 
+                Vi tenkte dermed nøye gjennom hvilke farger, fonter og størrelser på tekst vi ville bruke. "Alt"-tekst i bilder sørget vi også for å ha med. Gruppen gjorde bevisste valg på ulike ting, blant annet når det kom til overskrifter, media queries og "alt"-tekst. 
                 På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
-                For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre).
-                I tillegg, la vi alt-tekst på alle bilder og ikoner på sidene, både for brukervennligheten, og dersom bildet ikke kan vises grunnet dårlig dekning eller en feil i bildekoden.
+                For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standardskjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre).
+                I tillegg, la vi "alt"-tekst på alle bilder og ikoner på sidene, både for brukervennligheten, og dersom bildet ikke kan vises grunnet dårlig dekning eller en feil i bildekoden.
                 Det er også fullt mulig å bruke tab-knappen på tastaturet for å navigere seg gjennom sidene våre. 
             </p>
         </div>
@@ -75,28 +75,28 @@
         <div class="bilder">
             <img src="images/accessibility2.png" alt="Skjermbilde av nettsides endringer etter utført test">
             <div class="bildeTekst">
-                <p>Topical page etter endringer av første test</p>
+                <p>Endringer etter første test</p>
             </div>
         </div>
         
         <div class="tekst">
             <h1>Endringer av nettside etter test</h1>
             <p>Etter å ha kjørt de ulike sidene gjennom WAVE-testen første gang, fikk vi utslag på et par problemer. Som sett på bildet over, var disse problemene hovedsakelig grunnet kontrasten på tekst og bakgrunn. 
-                Dermed gjorde vi både grønnfargen og noen andre farger en del mørkere for at de med både godt og dårlig syn skal klare å lese boksene med farge. 
+                Dermed gjorde vi både grønnfargen og noen andre farger en del mørkere for at også de med dårlig syn skal klare å lese boksene med farge. 
                 I tillegg til kontrastutfordringene, kom det varsel om en tom link i sidebaren vår, som viste seg å være javascript:void(0)-linken som trengte en tittel. Det kom også en varsling om en "Redundant link", 
-                da vi har både en HJEM-link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til hjemsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.
+                da vi har både en Hjem-link i nav-baren samtidig som at SULTEN!-logoen kan brukes for å gå tilbake til hjemsiden. Gruppen valgte å beholde begge linkene da vi selv mente det er mer naturlig å kunne bruke begge linkene.
             </p>
             <br>
-            <p>Vi fikk også utslag på booking siden hvor vi hadde glemt å legge til label i form elementet. Dette er viktig å inkludere for god accessibility. Vi la dermed til en label på alle inputboksene, 
+            <p>Vi fikk også utslag på booking-siden hvor vi hadde glemt å legge til label i form elementet. Dette er viktig å inkludere for god accessibility. Vi la dermed til en label på alle inputboksene, 
                 men ønsket ikke at teksten som legges til automatisk på siden av boksene skulle være synlige. Vi vurderte hvordan vi skulle få til dette uten at det skulle gå utover brukervennligheten. Vi kom dermed frem 
-                til at Opacity: 0; ville være det beste. Da vil vi kunne bruke placeholdetekst, og både label og input vil bli lest opp av screen readers når de med nedsatt syn fyller inn skjemaet. 
+                til at opacity: "0"; ville være det beste. Da vil vi kunne bruke placeholdetekst, og både label og input vil bli lest opp av skjermleser når de med nedsatt syn fyller inn skjemaet. 
             </p>
         </div>
 
         <div class="bilder">
             <img src="images/accessibility3.png" alt="Skjermbilde av errors i bookingside">
             <div class="bildeTekst">
-                <p>Errors funnet i bookingsiden</p>
+                <p>Errors funnet i booking-siden</p>
             </div>
         </div>
 
