--- a/meny.html
+++ b/meny.html
@@ -22,24 +22,21 @@
 
             <header>
                 <div class="logo">    
-
                     <a href="index.html">
+                        <!-- Logo laget selv i illustrator -->
                         <img src="images/logo2.png" alt="Sulten hjemlogo">
                     </a>
-
                 </div>
 
                 <!-- Meny for større skjermer -->
                 <nav>
 
                     <div class="navbar-home" >
-
                         <a href="index.html">Hjem</a>
                         <a href="meny.html">Meny</a>
                         <a href="booking.html" class="nav-booking">Booking</a>
                         <a href="aktuelt.html">Topical Page</a>
                         <a href="brukervennlighet.html">Accessibility Page</a>
-
                     </div>
         
                 </nav>
@@ -73,6 +70,7 @@
                 <h1 class="centered">Velkommen til vår restaurant. Her kan du nyte et godt måltid i en behagelig atmosfære.</h1>
             </div>
 
+            <!--Åpningstider-->
             <div class="meny">  
                 <h1 style=" font-size: 3.5rem; text-align: center;">Meny</h1> 
                 <h2 style="color: #382c20; font-size: 1.4rem; text-align: center;">Åpningstider: </h2>
